# gcpfire

./: .env.dev  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
gcpfire/: __init__.py  compute.py  exceptions.py  instance.py  job.py  keys.py  logger.py  main.py  ssh_client.py  startup_script.sh
jobs/: analysis.sh  exporter.sh  startup_script.sh
test/: integration_test.py  test_gcpfire.py
