[tool.poetry]
name = "gcpfire"
version = "0.2.0"
description = "Fire jobs on GCP Compute Engine Preemptible VM Instances"
authors = ["Nicolas Iderhoff <hello@niid.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-compute = {git = "https://github.com/googleapis/python-compute"}
pytest = "^6.2.2"
google-cloud-datastore = "^2.1.0"
google-api-python-client = "^1.12.8"
oauth2client = "^4.1.3"
google-auth = "^1.27.0"
google-auth-oauthlib = "^0.4.2"
google-auth-httplib2 = "^0.0.4"
cryptography = "^3.4.6"
mypy = "^0.812"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119